build: use micewriter-sdk-bom for dependency management